test/error/ConstValueBase.fu
public static class Test
{
	const int Foo = base.Bar(); //ERROR: 'base' invalid outside methods

	public static bool Run()
	{
		return true;
	}
}
